<resources>
    <string name="app_name" translatable="false">Open Hosts Editor</string>
    <string name="app_developer" translatable="false">Vittorio Iocolano</string>
    <string name="app_copyright" translatable="false">Copyright © %1$d</string>
    <string name="app_description">Free and open source application to edit the /etc/hosts file for Android devices. Root is required for this app to work.</string>
    <string name="app_version">Version</string>
    <string name="app_credits">Made with 💖 by</string>
    <string name="app_contributors">Contributions from:</string>
    <string name="app_coffee">Buy Me a Coffee</string>
    <string name="app_discord" translatable="false">Discord Server</string>
    <string name="action_settings">Settings</string>
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="action_edit">Edit</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_delete">Delete</string>
    <string name="action_about">About</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_reset">Reset</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_search_cancel">Cancel Search</string>
    <string name="action_searching">Searching for \"%1$s\"</string>
    <string name="title_no_root">Root not detected</string>
    <string name="message_no_root">Root was not detected, the application might not run as expected. Do you wish to continue anyway?</string>
    <string name="message_failed_to_read_file">Failed to read original hosts file.</string>
    <string name="message_backup_saved">Backup saved.</string>
    <string name="message_backup_not_saved">Failed to save a backup.</string>
    <string name="message_backup_not_restored">Failed to restore backup.</string>
    <string name="message_backup_deleted">Backup deleted.</string>
    <string name="message_backup_not_deleted">Failed to delete backup.</string>
    <string name="message_permission_denied">Permission denied. No changes made.</string>
    <string name="action_add_rule">Add rule</string>
    <string name="action_edit_rule">Edit rule</string>
    <string name="action_delete_rule">Delete rule</string>
    <string name="message_confirm_delete_rule">Do you really want to delete this rule?</string>
    <string name="message_rule_removed">Rule deleted.</string>
    <string name="message_rule_not_removed">Failed to delete rule.</string>
    <string name="message_generic_error">Something went wrong.</string>
    <string name="message_preview_not_loaded">Failed to load preview.</string>
    <string name="title_connect">Links</string>
    <string name="title_credits">Credits</string>
    <string name="hint_url">URL</string>
    <string name="hint_ip_address">IPv4/IPv6 Address</string>

</resources>
