<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.vittorio_io.openhostseditor.activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_backup"
        android:icon="@drawable/ic_archive_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_unarchive_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
